Gnome 43: Fix double borders and black text in context menus

--- a/gtk-4.0/gtk-dark.css
+++ b/gtk-4.0/gtk-dark.css
@@ -2844,7 +2844,6 @@ menu, .menu, .context-menu {
   margin: 4px;
   padding: 2px 0px;
   background: #0d0f17;
-  border: 1px solid #040407;
   border-radius: 5px;
   font: initial; }
   .csd menu,
@@ -3235,7 +3234,8 @@ popover.background {
     background-color: #0d0f17;
     background-clip: padding-box;
     border: 1px solid #040407;
-    box-shadow: 0 4px 6px #040407; }
+    box-shadow: 0 4px 6px #040407;
+    color: #BFC3C4; }
   popover.background:backdrop {
     background-color: transparent;
     box-shadow: none; }
@@ -3296,6 +3296,7 @@ popover.menu {
         border-color: #1e2234; }
   popover.menu > arrow, popover.menu.background > contents {
     background-color: #0d0f17;
+    color: #BFC3C4;
     padding: 5px; }
   popover.menu.background separator {
     margin: 6px 0; }
